# Novel-PostSite-3.0

./: .gitignore  Dockerfile  default.conf  docker-compose.yml  nginx.conf  package-lock.json  package.json
backend/: Dockerfile  app.js  backupserver.js  package-lock.json  package.json  populateTesetData.js  server.js
backend/jobs/: dataMaintenance.js  initializeTrendingRanks.js  newTrendingJob.js  seriesTrendingRankingJob.js  totalRankingJob.js  trendingRankingJob.js  viewAggregate.js
backend/middlewares/: authenticateToken.js  logger.js  upload.js
backend/models/: Contest.js  Follow.js  Good.js  Notification.js  Post.js  Series.js  SeriesFollowerHistory.js  SeriesTrendingRank.js  TestUser.js  TotalRank.js  TotalSeriesRank.js  TrendingRank.js  User.js  ViewAnalytics.js
backend/routes/: analytics.js  auth.js  bookshelf.js  comments.js  contests.js  follow.js  notification.js  posts.js  search.js  series.js  seriesFollow.js  tags.js  totalRanking.js  trending.js  uploadRoutes.js  users.js  view.js  viewHistory.js
backend/scripts/: migrateViewData.js
backend/services/: correctedViewTrackingService.js  trendingService.js
backend/utils/: binaryPacking.js  elasticsearch.js  esClient.js  fixElasticsearchIndex.js  initializeContestTags.js  initializeTrending.js  migrateSeriesToElasticsearch.js  notificationGenerator.js  redisClient.js  seriesTrendingCalculator.js  timeWindow.js  totalPostRankingCalculator.js  (+2 more)
backend/wasm/: Cargo.toml
backend/wasm/src/: lib.rs  trend_calculator.rs
elasticsearch/: Dockerfile
public/: index.html
src/: App.js
(+160 files in other folders)
